# netbackup-py

./: README.md  documentation.md  pyproject.toml  requirements-dev.txt  requirements-py36.txt  requirements-ssh.txt  requirements.txt
examples/: basic_usage.py  collect_daily.py  health_check.py  legacy_py36_basic.py  list_jobs.py  smoke_test.py  stream_large_collections.py
nbu/: __init__.py  auth.py  client.py  config.py  exceptions.py  filters.py  version.py
nbu/collectors/: __init__.py  base.py
nbu/models/: __init__.py  base.py  clients.py  health.py  images.py  jobs.py  policies.py  slp.py  storage.py  vm.py
nbu/parsers/: __init__.py  bpdbjobs.py  bpimagelist.py  bppllist.py  bpstulist.py  clients.py  common.py  images.py  jobs.py  nbemmcmd.py  nbstl.py  policies.py  slp.py  storage.py  vm.py
nbu/services/: __init__.py  base.py  catalog.py  clients.py  health.py  images.py  jobs.py  licensing.py  policies.py  schedules.py  security.py  slp.py  storage.py  vm.py
nbu/transport/: __init__.py  api.py  ssh.py
tests/: test_api_transport.py  test_config_and_filters.py  test_direct_api.py  test_parsers.py  test_policies.py  test_service_filters.py  test_simple_api.py  test_version.py  test_vm_assets.py  test_vmware_preview.py  test_vmware_test_query.py
