[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbackup-py"
version = "0.1.0"
description = "Modern typed Python REST API library for Veritas NetBackup 10.0 and newer."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "NetBackup Python Contributors"}]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
include = ["nbu*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
